took out NODE_ENV (couldn't figure it out)

--- a/packages/lexical-playground/src/plugins/ToolbarPlugin.css
+++ b/packages/lexical-playground/src/plugins/ToolbarPlugin.css
@@ -4,6 +4,7 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  *
+ * R: it's apparent that this css gets copied into a single css file packaged into the final front-end code
  *
  */
 .ToolbarPlugin__dialogActions {
