--- a/packages/my-lexical-trial1/src/index.css
+++ b/packages/my-lexical-trial1/src/index.css
@@ -15,7 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #eee;
+  background: #fbfbfb;
   padding: 0 20px;
 }
 
