--- a/packages/my-lexical-trial1/src/index.css
+++ b/packages/my-lexical-trial1/src/index.css
@@ -15,12 +15,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #fbfbfb;
+/*  background: #fbfbfb;*/
+  background: #fff;
   padding: 0 20px;
 }
 
 header {
-  max-width: 580px;
+/*  max-width: 580px;*/
   margin: auto;
   position: relative;
   display: flex;
@@ -47,13 +48,13 @@ header h1 {
 }
 
 .editor-shell {
-  margin: 20px auto;
-  border-radius: 2px;
-  max-width: 1000px;
-  color: #000;
-  position: relative;
-  line-height: 20px;
-  font-weight: 400;
+/*  margin: 20px auto;*/
+/*  border-radius: 2px;*/
+/*  max-width: 1000px;*/
+/*  color: #000;*/
+/*  position: relative;*/
+/*  line-height: 20px;*/
+/*  font-weight: 400;*/
 }
 
 .editor-shell .editor-container {
